[gd_scene load_steps=6 format=2]

[ext_resource path="res://edition/load_and_show_plateforme_item.gd" type="Script" id=1]
[ext_resource path="res://edition/Edit.gd" type="Script" id=2]
[ext_resource path="res://edition/Button.gd" type="Script" id=3]
[ext_resource path="res://edition/Camera2D.gd" type="Script" id=4]

[sub_resource type="GradientTexture" id=1]

[node name="ControlRoot" type="Node"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
scale = Vector2( 0.0262638, 109.529 )
texture = SubResource( 1 )
region_rect = Rect2( 10, 10, 10, 10 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="CanvasLayer/Control"]
margin_right = 680.0
margin_bottom = 601.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 601.0
mouse_filter = 1
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 333.0
margin_bottom = 594.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 316.0
margin_bottom = 577.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 306.0
margin_bottom = 14.0
text = "Edition"
align = 1

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 306.0
margin_bottom = 493.0
mouse_filter = 1
size_flags_vertical = 3

[node name="I" type="ScrollContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( -189.133, 518.002 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/I"]
margin_right = 298.0
margin_bottom = 423.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 513.0
margin_right = 306.0
margin_bottom = 527.0

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/Label2"]
margin_right = 306.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 547.0
margin_right = 306.0
margin_bottom = 567.0
text = "Enregistrer"
script = ExtResource( 3 )
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/Button" to="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/Button" method="_on_Button_pressed"]
